Some changes still doesn't work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.17)
 
-project(upkggen)
+project(upkgen)
 
 set(CMAKE_CXX_STANDARD 20)
 
 file(GLOB_RECURSE SRC "Generator/*.hpp" "Generator/*.cpp")
 
-add_executable(upkggen ${SRC} main.cpp)
+add_executable(upkgen ${SRC} main.cpp)
 
-set_target_properties(upkggen PROPERTIES LINKER_LANGUAGE CXX)
-target_link_libraries(upkggen )
+set_target_properties(upkgen PROPERTIES LINKER_LANGUAGE CXX)
+target_link_libraries(upkgen )
